--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2025 Aniket Kamble. All Rights Reserved.</p>
+            <p>&copy; 2025 Nachiket. All Rights Reserved.</p>
             <div class="footer-social">
                 <a href="https://www.linkedin.com/in/nachiket-deo-287406283/" target="_blank"><i class="fab fa-linkedin"></i></a>
     
