--- a/certificates.html
+++ b/certificates.html
@@ -166,7 +166,7 @@
     </div> -->
 
     <footer>
-        <p>&copy; 2025 Aniket Kamble. All rights reserved.</p>
+        <p>&copy; 2025 Nachiket. All rights reserved.</p>
     </footer>
 </body>
 </html>
