--- a/certificates.html
+++ b/certificates.html
@@ -119,14 +119,14 @@
         <div class="lightbox-content">
             <a href="#" class="close-lightbox">&times;</a>
             <img src="images/LINUX.png" alt="Python Certificate">
-            <div class="lightbox-caption">HackerRank</div>
+            <div class="lightbox-caption">LINUX</div>
         </div>
     </div>
     <div id="lightbox-2" class="lightbox">
         <div class="lightbox-content">
             <a href="#" class="close-lightbox">&times;</a>
             <img src="images/CISCO.png" alt="IYMC Certificate">
-            <div class="lightbox-caption">International Youth Math Challenge</div>
+            <div class="lightbox-caption">PYTHON ESSENTIAL </div>
         </div>
     </div>
     <!-- <div id="lightbox-3" class="lightbox">
