--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section id="about" class="hero">
         <div class="container hero-content">
             <div class="profile-image">
-                <img src="images/profile.jpg" alt="Kamble Aniket">
+                <img src="images/profile.jpg" alt="Nachiket Deo">
             </div>
             <div class="profile-info">
                 <h1>Nachiket Deo</h1>
