--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="profile-info">
                 <h1>Nachiket Deo</h1>
-                <div class="typed-text">Passionate Coder | Web Developer | Photographer | YouTuber</div>
+                <div class="typed-text">Passionate Coder | Web Developer | Photographer | Chess</div>
                 <p>I'm a 1st-year Computer Science Engineering student with a burning passion for transforming ideas into digital realities. My journey is driven by an insatiable curiosity to learn, create, and innovate in the world of technology.</p>
                 <div class="contact-details">
                     <div class="contact-item">
